@@ -1,3 +1,7 @@
+Mon Jun 27 09:21:49 CEST 2005 Daniel Veillard <daniel@veillard.com>
+
+	* runtest.c: continue to increase the tests
+
 Mon Jun 27 01:01:32 CEST 2005 Daniel Veillard <daniel@veillard.com>
 
 	* runtest.c: continue to increase the tests
